--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div class="calc">
-
+        <section class="calc-display">
+            <p>0</p>
+        </section>
     </div>
 </body>
 </html>
