--- a/index.html
+++ b/index.html
@@ -12,6 +12,27 @@
         <section class="calc-display">
             <p>0</p>
         </section>
+        <section class="calc-keys">
+            <button class="other">AC</button>
+            <button class="other">DEL</button>
+            <button class="other">%</button>
+            <button class="operations">/</button>
+            <button class="numbers">7</button>
+            <button class="numbers">8</button>
+            <button class="numbers">9</button>
+            <button class="operations">*</button>
+            <button class="numbers">4</button>
+            <button class="numbers">5</button>
+            <button class="numbers">6</button>
+            <button class="operations">-</button>
+            <button class="numbers">1</button>
+            <button class="numbers">2</button>
+            <button class="numbers">3</button>
+            <button class="operations">+</button>
+            <button class="zero">0</button>
+            <button class="numbers">.</button>
+            <button class="operations">=</button>
+        </section>
     </div>
 </body>
 </html>
