Add functionality to display numbers on screen

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="module" src="app.js" defer></script>
+    <script type="module" src="/src/app.js" defer></script>
     <link rel="stylesheet" href="/css/style.css">
     <title>Calculator</title>
 </head>
 <body>
     <div class="calc">
         <section class="calc-display">
-            <p>0</p>
+            <p id="input-output">0</p>
         </section>
         <section class="calc-keys">
             <button class="other">AC</button>
@@ -29,7 +29,7 @@
             <button class="numbers">2</button>
             <button class="numbers">3</button>
             <button class="operations">+</button>
-            <button class="zero">0</button>
+            <button class="numbers zero">0</button>
             <button class="numbers">.</button>
             <button class="operations">=</button>
         </section>
