--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
             <button class="other">AC</button>
             <button class="other">DEL</button>
             <button class="other">%</button>
-            <button class="operations">/</button>
+            <button class="numbers operations">/</button>
             <button class="numbers">7</button>
             <button class="numbers">8</button>
             <button class="numbers">9</button>
-            <button class="operations">*</button>
+            <button class="numbers operations">*</button>
             <button class="numbers">4</button>
             <button class="numbers">5</button>
             <button class="numbers">6</button>
-            <button class="operations">-</button>
+            <button class="numbers operations">-</button>
             <button class="numbers">1</button>
             <button class="numbers">2</button>
             <button class="numbers">3</button>
-            <button class="operations">+</button>
+            <button class="numbers operations">+</button>
             <button class="numbers zero">0</button>
             <button class="numbers">.</button>
-            <button class="operations">=</button>
+            <button class="equal">=</button>
         </section>
     </div>
 </body>
