Add clear functionality

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <p id="input-output">0</p>
         </section>
         <section class="calc-keys">
-            <button class="other">AC</button>
+            <button class="other clear">AC</button>
             <button class="other">DEL</button>
             <button class="other">%</button>
             <button class="numbers operations">/</button>
