Add delete functionality

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </section>
         <section class="calc-keys">
             <button class="other clear">AC</button>
-            <button class="other">DEL</button>
+            <button class="other del">DEL</button>
             <button class="other">%</button>
             <button class="numbers operations">/</button>
             <button class="numbers">7</button>
