--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             <button class="numbers">2</button>
             <button class="numbers">3</button>
             <button class="numbers operations">+</button>
-            <button class="numbers zero">0</button>
+            <button class="numbers">+/-</button>
+            <button class="numbers">0</button>
             <button class="numbers">.</button>
             <button class="equal">=</button>
         </section>
