Add additional display for result (html, css)

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="calc">
         <section class="calc-display">
+            <p id="display-result">0</p>
             <p id="input-output">0</p>
         </section>
         <section class="calc-keys">
@@ -29,7 +30,7 @@
             <button class="numbers">2</button>
             <button class="numbers">3</button>
             <button class="numbers operations">+</button>
-            <button class="numbers">+/-</button>
+            <button class="numbers sign-change">+/-</button>
             <button class="numbers">0</button>
             <button class="numbers">.</button>
             <button class="equal">=</button>
