Add basic funtionality to get result when result button is pressed.

--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
             <button class="other clear">AC</button>
             <button class="other del">DEL</button>
             <button class="other">%</button>
-            <button class="numbers operations">/</button>
+            <button class="operations">/</button>
             <button class="numbers">7</button>
             <button class="numbers">8</button>
             <button class="numbers">9</button>
-            <button class="numbers operations">*</button>
+            <button class="operations">*</button>
             <button class="numbers">4</button>
             <button class="numbers">5</button>
             <button class="numbers">6</button>
-            <button class="numbers operations">-</button>
+            <button class="operations">-</button>
             <button class="numbers">1</button>
             <button class="numbers">2</button>
             <button class="numbers">3</button>
-            <button class="numbers operations">+</button>
-            <button class="numbers sign-change">+/-</button>
+            <button class="operations">+</button>
+            <button class="sign-change">+/-</button>
             <button class="numbers">0</button>
             <button class="numbers">.</button>
             <button class="equal">=</button>
