Correct clear.js after changes

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <div class="calc">
         <section class="calc-display">
-            <p id="display-result">0</p>
-            <p id="input-output">0</p>
+            <p id="subsidiaryDisplay">0</p>
+            <p id="resultDisplay">0</p>
         </section>
         <section class="calc-keys">
             <button class="other clear">AC</button>
