Remove getting elements from DOM

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <p id="resultDisplay">0</p>
         </section>
         <section class="calc-keys">
-            <button class="other clear">AC</button>
-            <button class="other del">DEL</button>
+            <button class="other" id="clearBtn">AC</button>
+            <button class="other" id="delBtn">DEL</button>
             <button class="other">%</button>
             <button class="operations">/</button>
             <button class="numbers">7</button>
@@ -33,7 +33,7 @@
             <button class="sign-change">+/-</button>
             <button class="numbers">0</button>
             <button class="numbers">.</button>
-            <button class="equal">=</button>
+            <button class="equal" id="resultBtn">=</button>
         </section>
     </div>
 </body>
