Basic functionality (not working yet) to using keyboard.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </section>
         <section class="calc-keys">
             <button class="other" id="clearBtn">AC</button>
-            <button class="other" id="delBtn">DEL</button>
+            <button class="other" id="delBtn">C</button>
             <button class="other">%</button>
             <button class="operations">/</button>
             <button class="numbers">7</button>
