Basic structure for percentage.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <section class="calc-keys">
             <button class="other" id="clearBtn">AC</button>
             <button class="other" id="delBtn">C</button>
-            <button class="other">%</button>
+            <button class="other" id="percentageBtn">%</button>
             <button class="operations">/</button>
             <button class="numbers">7</button>
             <button class="numbers">8</button>
